--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "watch": "webpack --watch",
     "capture": "autojs cap",
     "code-generate:images": "node ./scripts/generate-images-code.js",
-    "adb:push": "node ./scripts/push.js",
+    "push": "node ./scripts/push.js",
     "release": "standard-version"
   },
   "dependencies": {
+    "cross-env": "^6.0.3",
     "lodash.sortby": "4.7.0",
     "package.json": "^2.0.1"
   },
@@ -23,7 +24,6 @@
     "@commitlint/config-conventional": "8.2.0",
     "@types/lodash.sortby": "4.7.6",
     "autojs-dev": "0.7.1",
-    "cross-env": "6.0.0",
     "husky": "3.0.7",
     "lint-staged": "9.4.0",
     "prettier": "1.18.2",
@@ -33,8 +33,7 @@
     "tslint": "5.20.0",
     "tslint-microsoft-contrib": "6.2.0",
     "typescript": "3.6.3",
-    "webpack": "4.41.0",
-    "webpack-cli": "3.3.9"
+    "webpack-cli": "^3.3.9"
   },
   "husky": {
     "hooks": {
