--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dragalia-dbm",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "private": true,
   "main": "src/main.ts",
   "repository": "https://github.com/NyxSLY/dragalia-dbm.git",
@@ -17,7 +17,8 @@
   "dependencies": {
     "cross-env": "^6.0.3",
     "lodash.sortby": "4.7.0",
-    "package.json": "^2.0.1"
+    "package.json": "^2.0.1",
+    "webpack": "^4.41.2"
   },
   "devDependencies": {
     "@babel/core": "^7.6.4",
